# axon-mcp

./: .dockerignore  .gitignore  API.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DECISIONS.md  DEPLOYMENT.md  Dockerfile  INTERFACES.md  LICENSE  MCP_TESTING_GUIDE.md  MCPv2.TASK-LIST.md  Makefile  PRD.md  README.md  SHARED_CONTEXT.md  STATUS.md  STDIO_TESTING.md  STDIO_USAGE.md  SYSTEM_STATUS.md  TASKLIST.core.md  TASKLIST.database.md  TASKLIST.mcp-protocol.md  TASKLIST.mcp-server.md  TASKLIST.mocks.md  check-status.sh  docker-compose.yml  install.ps1  install.sh  log.sh  mcp-server.service  run_json_test.sh  server.mk  simple_workflow_test.sh  stdio_test_cases.json  test_critical_fixes.sh  test_filtering_fix.sh  (+4 more)
.axon/: axon-mcp.sqlite  axon-mcp.sqlite-shm  axon-mcp.sqlite-wal
.claude/agents/: backend-developer.md  bug-fixer1.md  bug-fixer2.md  bug-fixer3.md  bug-fixer4.md  bug-fixer5.md  core-developer.md  database-designer.md  database-engineer.md  devops-engineer.md  documentation-specialist.md  git-coordinator.md  integration-lead.md  mcp-integrator.md  project-finalizer.md  protocol-specialist.md  qa-tester.md  rust-architect.md  testing-expert.md
.github/workflows/: release.yml  test-install.yml
core/: AUDIT-RESULT.md  Cargo.toml  README.md
core/src/: ai_tool_adapters.rs  circuit_breaker.rs  error.rs  lib.rs  mcp_v2_extensions.rs  models.rs  prompt_templates.rs  protocol.rs  repository.rs  validation.rs  workspace_setup.rs
core/tests/: enhanced_prompt_tests.rs  scenario_testing.rs  workspace_setup_integration.rs
database/: :memory:contract_1753860678756849000_ThreadId(2)  :memory:contract_1753869324051057000_ThreadId(2)  :memory:contract_1753876399541191000_ThreadId(2)  :memory:contract_1753876462789858000_ThreadId(2)  :memory:test_1753859842049172000_ThreadId(10)  :memory:test_1753859842049172000_ThreadId(9)  :memory:test_1753859842049178000_ThreadId(7)  :memory:test_1753859842049185000_ThreadId(8)  :memory:test_1753859842049212000_ThreadId(5)  :memory:test_1753859842049223000_ThreadId(6)  :memory:test_1753860678386623000_ThreadId(9)  :memory:test_1753860678386626000_ThreadId(6)  :memory:test_1753860678386630000_ThreadId(7)  :memory:test_1753860678386633000_ThreadId(5)  :memory:test_1753860678386665000_ThreadId(8)  :memory:test_1753860678386667000_ThreadId(10)  :memory:test_1753860679081947000_ThreadId(4)  :memory:test_1753860679081948000_ThreadId(3)  :memory:test_1753860679081964000_ThreadId(5)  :memory:test_1753860679081967000_ThreadId(8)  :memory:test_1753860679081970000_ThreadId(6)  :memory:test_1753860679081985000_ThreadId(9)  :memory:test_1753860679082001000_ThreadId(2)  :memory:test_1753860679082054000_ThreadId(7)  :memory:test_1753860679176198000_ThreadId(37)  :memory:test_1753860679180404000_ThreadId(39)  :memory:test_1753869323665015000_ThreadId(9)  :memory:test_1753869323665016000_ThreadId(5)  :memory:test_1753869323665020000_ThreadId(8)  :memory:test_1753869323665043000_ThreadId(10)  :memory:test_1753869323665061000_ThreadId(7)  :memory:test_1753869323665098000_ThreadId(6)  :memory:test_1753869324376975000_ThreadId(9)  :memory:test_1753869324376976000_ThreadId(7)  :memory:test_1753869324376985000_ThreadId(4)  :memory:test_1753869324376998000_ThreadId(6)  :memory:test_1753869324376999000_ThreadId(5)  :memory:test_1753869324377014000_ThreadId(3)  :memory:test_1753869324377017000_ThreadId(2)  :memory:test_1753869324377106000_ThreadId(8)  (+43 more)
database/migrations/sqlite/: 001_create_tasks.sql  002_add_mcp_v2_features.sql  003_fix_owner_agent_name_constraint.sql  004_add_task_timeout_support.sql  004_update_task_messages_schema.sql  005_add_target_agent_to_task_messages.sql  006_create_workspace_contexts.sql  007_create_work_sessions.sql  007_update_task_messages_schema.sql
database/src/: common.rs  lib.rs  sqlite.rs  workspace_context_repository.rs
database/tests/: contract.rs  sqlite_integration.rs
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  MCP.v2.md  PRD.md  WORKSPACE-SETUP.md  installation.md  sample-PRD.md  troubleshooting.md
docs/schemas/: README.md  create-main-ai-file.json  get-agentic-workflow-description.json  get-instructions-for-main-ai-file.json  get-setup-instructions.json  get-workspace-manifest.json  register-agent.json  workspace-setup-schemas.json
docs/schemas/mcp-functions/: create_main_file.json  generate_workspace_manifest.json  (+4 more)
examples/: mcp_client_example.rs
integration-tests/: Cargo.toml
integration-tests/scenarios/: complete_workflow.ron
integration-tests/src/: http_integration_main.rs  http_tests.rs  main.rs  manual_tests.rs  minimal_test.rs  rmcp_http_main.rs  rmcp_http_tests.rs  rmcp_tests.rs
mcp-protocol/: AUDIT-RESULT.md  Cargo.toml  README.md
mcp-protocol/src/: auth.rs  error.rs  handler.rs  lib.rs  request_logger.rs  rmcp_handler.rs  rmcp_simple_handler.rs  serialization.rs  server.rs
mcp-protocol/tests/: audit_fixes.rs  integration_tests.rs  performance.rs  protocol_compliance.rs
mcp-server/: AUDIT-RESULT.md  Cargo.toml  DECISIONS.md  README.md
mcp-server/config/: default.toml  production.toml
mcp-server/src/: config.rs  lib.rs  main.rs  self_update.rs  setup.rs  stdio.rs  telemetry.rs
mcp-server/tests/: integration_tests.rs  mcp_integration_tests.rs
mocks/: AUDIT-RESULT.md  Cargo.toml  README.md  STATUS.md
mocks/src/: assertions.rs  builders.rs  contracts.rs  fixtures.rs  generators.rs  lib.rs  repository.rs
mocks/tests/: integration_tests.rs
scripts/: test-cross-platform.sh
tasks/: CORE01.md  CORE02.md  CORE03.md  CORE04.md  CORE05.md  CORE06.md  CORE07.md  CORE08.md  CORE09.md  CORE10.md  DATABASE01.md  DATABASE02.md  DATABASE03.md  DATABASE04.md  DATABASE05.md  DATABASE06.md  DATABASE07.md  DATABASE08.md  DATABASE09.md  DATABASE10.md  DATABASE11.md  MOCKS01.md  PROTOCOL01.md  PROTOCOL02.md  PROTOCOL03.md  PROTOCOL04.md  PROTOCOL05.md  PROTOCOL06.md  SERVER01.md  SERVER02.md
templates/: CLAUDE.md.hbs
tests/: install.bats  test_helper.bash
workspace-orchestrator/: Cargo.toml
workspace-orchestrator/src/: main.rs  poc_test.rs
