[workspace]
members = [
    "core",
    "mcp-server", "database", "mcp-protocol", "mocks", "workspace-orchestrator",
]
default-members = [
    "core",
    "mcp-server", "database", "mcp-protocol", "mocks", "workspace-orchestrator",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
config = "0.13"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive", "env"] }
handlebars = "4.3"
reqwest = { version = "0.11", features = ["json"] }

# Testing dependencies
eventsource-client = "0.12"
assert_cmd = "2.0"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"
futures-util = "0.3"
serde_json = "1.0"

# Release profile optimizations for smaller binaries
[profile.release]
opt-level = "z"          # Optimize for size
lto = true               # Enable Link Time Optimization
codegen-units = 1        # Single codegen unit for better optimization
strip = true             # Strip symbols
panic = "abort"          # Smaller panic handler
