[package]
name = "task-core"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait.workspace = true
chrono = { workspace = true, features = ["serde"] }
regex = "1.11.1"
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full", "macros"] }
