[package]
name = "task-core"
version = "0.2.1"
edition = "2021"

[dependencies]
async-trait.workspace = true
chrono = { workspace = true, features = ["serde"] }
regex = "1.11.1"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.141"
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full", "macros"] }
