[package]
name = "database"
version = "0.3.0"
edition = "2021"

[dependencies]
task-core = { path = "../core" }
async-trait.workspace = true
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "chrono", "migrate"] }
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
chrono = { workspace = true, features = ["serde"] }
serde_json = "1.0.141"

[dev-dependencies]
futures = "0.3.31"
tokio-test = "0.4"
uuid = { version = "1.17.0", features = ["v4"] }
