[package]
name = "mcp-server"
version = "0.3.0"
edition = "2021"

# Library for testing and integration
[lib]
name = "mcp_server"
path = "src/lib.rs"

# Binary executable
[[bin]]
name = "axon-mcp"
path = "src/main.rs"

# Minimal test binary
[[bin]]
name = "axon-mcp-minimal"
path = "src/main_minimal.rs"

[dependencies]
task-core = { path = "../core" }
tokio = { workspace = true, features = ["full", "signal"] }

# Configuration management
config = { workspace = true }
serde = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }

# Logging and tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# For reading .env files
dotenv = "0.15"
database = { version = "0.3.0", path = "../database" }
mcp-protocol = { version = "0.3.0", path = "../mcp-protocol" }
toml = "0.9.3"
serde_json = "1.0.141"
sqlx = "0.8.6"
reqwest = { workspace = true }
zip = { version = "4.3.0", features = ["deflate"] }
dirs = "6.0.0"
sha2 = "0.10.9"
hex = "0.4.3"

[dev-dependencies]
futures-util = "0.3.31"
mocks = { path = "../mocks" }
reqwest = { workspace = true, features = ["stream"] }
serde_json = "1.0.141"
tempfile = "3.20.0"
tokio-stream = "0.1.17"
url = "2.5.4"
# Testing utilities will be added when mocks crate is available